# ia_virtual_assistant_product_store_demo

./: .gitignore  pyproject.toml  store.db
app/: db.py  main.py  models.py  repositories.py  schemas.py
app/endpoints/: ai_endpoints.py  product_endpoints.py
app/services/: ai_handler.py  gemini_service.py  product_service.py  session_memory.py
